--- a/lobzikapp/templates/lobzikapp/add-star.html
+++ b/lobzikapp/templates/lobzikapp/add-star.html
@@ -1,4 +1,4 @@
-{% extends 'star/base.html' %}
+{% extends 'lobzikapp/base.html' %}
 {% block title %}{{ title }} - Borntoday.ru{% endblock %}
 
 {% block content %}
