--- a/lobzikapp/templates/lobzikapp/header.html
+++ b/lobzikapp/templates/lobzikapp/header.html
@@ -29,7 +29,7 @@
   
       <!-- Кнопка «Добавить знаменитость» (пример) -->
       <div>
-        <a href="#" class="btn btn-primary">Добавить знаменитость</a>
-      </div>
+        <a href="{% url 'add_star' %}" class="btn btn-primary">Добавить знаменитость</a>
+    </div>
     </div>
   </nav>
