--- a/lobzikapp/templates/lobzikapp/about.html
+++ b/lobzikapp/templates/lobzikapp/about.html
@@ -1,9 +1,33 @@
+<!-- templates/star/about.html -->
 {% extends 'lobzikapp/base.html' %}
 {% block title %}{{ title }} - Borntoday.ru{% endblock %}
 
 {% block content %}
-<h3>О сайте</h3>
-<p>
-{{ description }}
-<p>
+    <h3>{{ title }}</h3>
+    <p>{{ description }}</p>
+
+    <!-- Блок статистики -->
+    <div class="stats-block my-4">
+        <h4>Статистика</h4>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>{{ stats.stars }}</h5>
+                    <p class="text-muted">Знаменитостей</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>{{ stats.countries }}</h5>
+                    <p class="text-muted">Стран</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card p-3">
+                    <h5>{{ stats.categories }}</h5>
+                    <p class="text-muted">Категорий</p>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
