--- a/lobzikapp/templates/lobzikapp/sitemap_letter.html
+++ b/lobzikapp/templates/lobzikapp/sitemap_letter.html
@@ -1,4 +1,4 @@
-<!-- templates/star/sitemap_letter.html -->
+<!-- templates/lobzikapp/sitemap_letter.html -->
 {% extends 'lobzikapp/base.html' %}
 {% load static %}
 
@@ -8,7 +8,6 @@
     <div class="sitemap-container">
         <h1>Карта сайта - Знаменитости на букву {{ current_letter }}</h1>
         
-        <!-- Алфавитная навигация -->
         <div class="alphabet-nav mb-4">
             <a href="{% url 'sitemap' %}" class="btn btn-outline-primary btn-sm m-1">Все</a>
             {% for letter in alphabet %}
@@ -29,7 +28,7 @@
                     <li class="mb-2">
                         <a href="{% url 'star_detail' slug=star.slug %}">{{ star.name }}</a>
                         {% if star.birth_date %}
-                            ({{ star.get_age }} лет)
+                            ({{ star.get_age_with_correct_word }})
                         {% endif %}
                     </li>
                 {% empty %}
